Stop using deprecated URL constructors in o.e.jdt.ui.tests
* Let Bundle.getEntry do full resolving
* If it's actually used to openConnection go through URI creation.